This commit includes multiple changes and almost resolves issue #69:
1.Ran prettier on the entire code
2.Renamed PostAllowed to OpinionsExist
3.Extracted logic out of onWebSocketAPI into multiple smaller functions
4.Converted big if/else chain into switch
5.Added new edit button to menu
6.Added function to switch between new opinion and edit button
7.Calling the switching function when a topic loads
8.Removing the edit button when a topic unloads
9.Storing current topic's opinion that belongs to the user in a global
  variable
10.Changed home button's icon, to better represent the button's function
11.Maybe I forgot something, smaller commits next time
